Updating the bruphy post, improving back end menu

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -33,7 +33,10 @@ columns:
       pages:
         type: pages
         create: default
-        templates:
-          - about
-          - home
-          - default
+        status: listed
+      unlisted:
+        type: pages
+        status: unlisted
+      drafts:
+        type: pages
+        status: drafts
