--- a/site/blueprints/pages/font.yml
+++ b/site/blueprints/pages/font.yml
@@ -84,6 +84,10 @@ tabs:
             label: Design info
             type: select
             options: pages
+          opengraphimage:
+            label: Graph Image
+            type: files
+            multiple: false
 
       - width: 1/3
         sections:
