--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,10 @@
 [submodule "kirby"]
 	path = kirby
-	url = https://github.com/getkirby/kirby.git
+	url = git@github.com:getkirby/kirby.git
 [submodule "site/plugins/merx"]
 	path = site/plugins/merx
-	url = https://github.com/wagnerwagner/merx.git
+	url = git@github.com:wagnerwagner/merx.git
 [submodule "site/plugins/meta-tags"]
 	path = site/plugins/meta-tags
-	url = https://github.com/pedroborges/kirby-meta-tags.git
+	url = git@github.com:pedroborges/kirby-meta-tags.git
+
