Trying a different php version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
       with:
         submodules: recursive
         
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
+        extensions: mbstring, intl, gd, xml, dom, json, fileinfo, curl, zip, iconv
+        
     - name: Set Repo Data
       run: |
         echo "REPO_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
