--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require": {
         "php": ">=7.3.0 <8.1.0",
-        "getkirby/cms": "^3.5"
+        "getkirby/cms": "^3.5",
+        "wagnerwagner/merx": "1.9.1"
     },
     "scripts": {
         "start": [
